# win32

./: CMakeLists.txt
lib/: CMakelists.txt  d_lib.cpp  d_lib.h
main/: CMakeLists.txt  main.cpp
shm/: CMakeLists.txt  main.cpp
